--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,14 @@ repositories {
 	mavenCentral()
 }
 
-ext {
-	set('springCloudVersion', "2020.0.5")
+dependencyManagement {
+	imports {
+		mavenBom 'org.springdoc:springdoc-openapi:1.6.5'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.5'
+	}
 }
 
 dependencies {
-	implementation platform("org.springdoc:springdoc-openapi:1.6.4")
-	implementation platform("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
-
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
