--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencyManagement {
 	imports {
 		mavenBom 'org.springdoc:springdoc-openapi:1.6.5'
 		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.5'
+		mavenBom 'org.springframework.boot:spring-boot:2.5.8'
 	}
 }
 
